--- a/cssmenu.css
+++ b/cssmenu.css
@@ -15,6 +15,14 @@ display:inline;
 #collapsPageDiv a, #collapsPageDiv h2 {
 /*display: block;*/
 display:inline;
+width:10em;
+}
+#collapsPageDiv ul ul li a {
+  display:block;
+  width:10em;
+  border:0;
+  padding:0;
+  margin:0;
 }
 
 #collapsPageDiv h2 {
