--- a/collapsPage.css
+++ b/collapsPage.css
@@ -32,4 +32,5 @@ font-size:1.3em;
 
 #sidebar li.collapsPage {list-style-type:none}
 #sidebar li.collapsPage:before {content:'';} 
-/*#sidebar li.collapsItem:before {content: "\00BB \00A0" !important;} */
+#sidebar li#collapsing-pages ul li ul li.collapsItem {padding-left:1em;} 
+#sidebar ul li ul li.collapsItem:before {content: "\00BB \00A0" !important;} 
