--- a/collapsPage.css
+++ b/collapsPage.css
@@ -1,35 +1,40 @@
 /*
-collapsPage Pages version: 0.2.5
+Collapsing Pages version: 0.3
 Copyright 2007 Robert Felty
 
-This work is largely based on the Fancy Pages plugin by Andrew Rader
-(http://voidsplat.org), which was also distributed under the GPLv2. See the
-CHANGELOG file for more information.
 
-This file is part of collapsPage Pages
+This file is part of collapsPage pages
 
-		collapsPage Pages is free software; you can redistribute it and/or
+		Collapsing Pages is free software; you can redistribute it and/or
     modify it under the terms of the GNU General Public License as published by 
     the Free Software Foundation; either version 2 of the License, or (at your
     option) any later version.
 
-    collapsPage Pages is distributed in the hope that it will be useful,
+    Collapsing Pages is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
     You should have received a copy of the GNU General Public License
-    along with collapsPage Pages; if not, write to the Free Software
+    along with Collapsing Pages; if not, write to the Free Software
     Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 */
 
-#sidebar span.collapsPage {border:0;
+span.collapsPage {border:0;
  padding:0; 
  margin:0; 
  cursor:pointer;
-font-size:1.3em;
+/* font-family: Monaco, 'Andale Mono', Courier, monospace;*/
 }
 
-#sidebar li.collapsPage {list-style-type:none}
 #sidebar li.collapsPage:before {content:'';} 
-/*#sidebar li.collapsItem:before {content: "\00BB \00A0" !important;} */
+#sidebar li.collapsPage {list-style-type:none}
+#sidebar li.collapsPagePost {
+             text-indent:-1em;
+             margin:0 0 0 1em;}
+li.widget.collapsPage ul {margin-left:.5em;}
+#sidebar li.collapsItem :before {content: "\00BB \00A0" !important;} 
+#sidebar li.collapsPage .sym {
+               font-size:1.2em;
+               font-family:Monaco, 'Andale Mono', 'FreeMono', 'Courier new', 'Courier', monospace;
+      padding-right:5px;}
